Bug fix in region_overlap and documentation update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(simpleCap)
 export(top_diff_peaks)
 import(ChIPseeker)
 import(GenomicRanges)
+import(SparseM)
 import(TxDb.Hsapiens.UCSC.hg38.knownGene)
 import(abind)
 import(biomaRt)
