Fix bug in getPseudobulk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(simpleCap)
 export(top_diff_peaks)
 import(ChIPseeker)
 import(GenomicRanges)
+import(Matrix)
 import(SparseM)
 import(TxDb.Hsapiens.UCSC.hg38.knownGene)
 import(abind)
