Add motif enrichment and utility functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(FindCausalProb)
 export(FindLinkedGenes)
 export(FlattenMatrix)
 export(ImportCausalSNPs)
+export(MotifEnrich)
 export(TopDiffPeaks)
+export(UnflattenVec)
 export(cluster_pheno_pvals)
 export(cluster_pheno_scores)
 export(extend_gr)
@@ -17,6 +19,7 @@ export(getBulkDev)
 export(getPseudobulk)
 export(get_coaccess_peaks)
 export(granges2df)
+export(granges2peak)
 export(invertList)
 export(invertListVector)
 export(parse_bed_directory)
@@ -30,6 +33,7 @@ export(top_diff_peaks)
 import(ChIPseeker)
 import(GenomicRanges)
 import(Matrix)
+import(Signac)
 import(SparseM)
 import(TxDb.Hsapiens.UCSC.hg38.knownGene)
 import(abind)
