--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chromfunks
 Type: Package
 Title: Functions for Analyzing Chromatin Accessibility Data
-Version: 0.3.1
+Version: 0.3.2
 Author: Yan Wu
 Maintainer: Yan Wu <yauwning@gmail.com>
 Description: A series of functions to help with integrating GWAS results with chromatin accessibility peaks
@@ -21,7 +21,8 @@ Imports:
   ChIPseeker,
   org.Hs.eg.db,
   TxDb.Hsapiens.UCSC.hg38.knownGene,
-  SummarizedExperiment
+  SummarizedExperiment,
+  Signac
 Suggests:
   gchromVAR
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
