Clean up some functions and add helper functions for building TF networks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,19 @@ export(FilterConns)
 export(FindCausalPeaks)
 export(FindCausalProb)
 export(FindLinkedGenes)
-export(FlattenMatrix)
+export(FindNearbyGenes)
 export(ImportCausalSNPs)
 export(MotifEnrich)
 export(RegionGeneContact)
 export(RegionOverlapList)
+export(TFRegionMotifs)
 export(TopDiffPeaks)
-export(UnflattenVec)
+export(buildRegionMatrix)
 export(extend_gr)
 export(find_all_diff)
+export(flattenMat)
 export(formatCisTopicPeaks)
+export(geneAnno)
 export(getBulkDev)
 export(getPseudobulk)
 export(granges2df)
@@ -25,8 +28,10 @@ export(peak2df)
 export(peak2granges)
 export(simpleCap)
 export(top_diff_peaks)
+export(unflattenVec)
 import(ChIPseeker)
 import(GenomicRanges)
 import(Matrix)
 import(Signac)
 import(SparseM)
+import(annotate)
