--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chromfunks
 Type: Package
 Title: Functions for Analyzing Chromatin Accessibility Data
-Version: 0.4.0
+Version: 0.4.1
 Author: Yan Wu
 Maintainer: Yan Wu <yauwning@gmail.com>
 Description: A series of functions to help with integrating GWAS results with chromatin accessibility peaks
@@ -22,7 +22,8 @@ Imports:
   org.Hs.eg.db,
   TxDb.Hsapiens.UCSC.hg38.knownGene,
   SummarizedExperiment,
-  Signac
+  Signac,
+  annotate
 Suggests:
   gchromVAR
 RoxygenNote: 7.1.1
