Add functions for handling counts matrices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(FindCausalPeaks)
 export(FindCausalProb)
 export(FindLinkedGenes)
 export(FindNearbyGenes)
+export(GetBinCounts)
+export(GetRegionCounts)
 export(ImportCausalSNPs)
 export(MotifEnrich)
 export(RegionChromVAR)
