Add wrapper function for linking TFs to genomic regions using motifs and single cell co-accessibility

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(FindNearbyGenes)
 export(GetBinCounts)
 export(GetRegionCounts)
 export(ImportCausalSNPs)
+export(LogTFIDF)
 export(MotifEnrich)
+export(MotifRegionLinks)
 export(RegionChromVAR)
 export(RegionGeneLinks)
 export(RegionOverlapList)
@@ -19,7 +21,6 @@ export(RegionOverlapScores)
 export(TFGeneLinks)
 export(TFRegionLinks)
 export(TopDiffPeaks)
-export(buildRegionMatrix)
 export(extend_gr)
 export(find_all_diff)
 export(flattenMat)
@@ -41,7 +42,3 @@ import(GenomicRanges)
 import(Matrix)
 import(Signac)
 import(SparseM)
-import(SummarizedExperiment)
-import(annotate)
-import(chromVAR)
-import(snow)
