--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chromfunks
 Type: Package
 Title: Functions for Analyzing Chromatin Accessibility Data
-Version: 0.5.3
+Version: 0.6.0
 Author: Yan Wu
 Maintainer: Yan Wu <yauwning@gmail.com>
 Description: A series of functions to help with integrating GWAS results with chromatin accessibility peaks
@@ -15,17 +15,15 @@ Imports:
   reshape2,
   methods,
   compiler,
-  SparseM,
   GenomicRanges,
   abind,
-  ChIPseeker,
+  ChIPseeker
+Suggests:
+  chromVAR,
+  snow,
+  annotate,
   org.Hs.eg.db,
   TxDb.Hsapiens.UCSC.hg38.knownGene,
   SummarizedExperiment,
-  chromVAR,
-  Signac,
-  annotate,
-  snow
-Suggests:
   gchromVAR
 RoxygenNote: 7.1.1
