--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(FindCausalProb)
 export(FindLinkedGenes)
 export(FindNearbyGenes)
 export(GetBinCounts)
+export(GetClusterAvg)
 export(GetRegionCounts)
 export(ImportCausalSNPs)
 export(LogTFIDF)
@@ -18,6 +19,7 @@ export(RegionChromVAR)
 export(RegionGeneLinks)
 export(RegionOverlapList)
 export(RegionOverlapScores)
+export(SubsetLinks)
 export(TFGeneLinks)
 export(TFRegionLinks)
 export(TopDiffPeaks)
