Add function for visualizing networks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(ImportCausalSNPs)
 export(LogTFIDF)
 export(MotifEnrich)
 export(MotifRegionLinks)
+export(PlotNetwork)
 export(RegionChromVAR)
 export(RegionGeneLinks)
 export(RegionOverlapList)
